--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,40 @@
   <name>sping-demo</name>
   <url>http://maven.apache.org</url>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <!--start with basic information to get Liquibase plugin:
+          include <groupId>, <artifactID>, and <version> elements-->
+          <groupId>org.liquibase</groupId>
+          <artifactId>liquibase-maven-plugin</artifactId>
+          <version>4.20.0</version>
+          <configuration>
+            <!--set values for Liquibase properties and settings
+            for example, the location of a properties file to use-->
+            <propertyFile>src/main/dbschema/liquibase.properties</propertyFile>
+          </configuration>
+          <dependencies>
+            <!--set up any dependencies for Liquibase to function in your environment for example, a database-specific plugin-->
+            <dependency>
+              <groupId>mysql</groupId>
+              <artifactId>mysql-connector-java</artifactId>
+              <version>8.0.33</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
   <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
