--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .idea/
 target/
 .project
+src/main/dbschema/
+liquibase.properties
+example-changelog.sql
+liquibase.advanced.flowfile.yaml
+liquibase.endstage.flow
+liquibase.flowfile.yaml
+liquibase.flowvariables.yaml
