--- a/src/main/dbschema/liquibase.properties
+++ b/src/main/dbschema/liquibase.properties
@@ -1,7 +1,7 @@
-changeLogFile=changelog.xml
-driver=com.mysql.cj.jdbc.Driver
+changeLogFile=src/main/dbschema/changelog.xml
+driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost/demo1
-username=root
-password=FMAll
+username=demo1
+password=1111
 verbose=true
 dropFirst=false
