--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/demo1
-spring.datasource.username=root
-spring.datasource.password=FMAll
+spring.datasource.username=demo1
+spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
