--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
           <dependencies>
             <!--set up any dependencies for Liquibase to function in your environment for example, a database-specific plugin-->
             <dependency>
-              <groupId>mysql</groupId>
-              <artifactId>mysql-connector-java</artifactId>
+              <groupId>com.mysql</groupId>
+              <artifactId>mysql-connector-j</artifactId>
               <version>8.0.33</version>
             </dependency>
           </dependencies>
@@ -41,8 +41,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
       <version>8.0.33</version>
     </dependency>
 
@@ -61,6 +61,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>3.0.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
       <version>3.0.6</version>
     </dependency>
 
