--- a/src/main/dbschema/liquibase.properties
+++ b/src/main/dbschema/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/dbschema/changelog.xml
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost/demo1
-username=demo1
-password=1111
+username=root
+password=FMAll
 verbose=true
 dropFirst=false
